// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AVPlayer for Live Radio should match snapshot for canonical AVPlayer 1`] = `
.emotion-1 amp-iframe,
.emotion-1 div>iframe {
  width: calc(100% + 1rem);
  margin: 0 -0.5rem;
}

@media (min-width: 25rem) {
  .emotion-1 amp-iframe,
  .emotion-1 div>iframe {
    width: calc(100% + 2rem);
    margin: 0 -1rem;
  }
}

.emotion-3 {
  height: 165px;
  position: relative;
  margin-bottom: 1rem;
}

@media (min-width:63rem) {
  .emotion-3 {
    margin-bottom: 2rem;
  }
}

.emotion-5 {
  border: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

<div>
  <div
    class="emotion-0 emotion-1 emotion-2"
  >
    <div
      class="emotion-3 emotion-4"
    >
      <iframe
        allow="autoplay"
        allowfullscreen=""
        class="emotion-5 emotion-6"
        scrolling="no"
        src="https://test.bbc.com/ws/av-embeds/media/bbc_korean_radio/liveradio/ko"
        title="오디오 플레이어"
      />
      <noscript />
    </div>
  </div>
</div>
`;

exports[`AVPlayer for On Demand Radio should match snapshot for AMP AVPlayer 1`] = `
.emotion-1 amp-iframe,
.emotion-1 div>iframe {
  width: calc(100% + 1rem);
  margin: 0 -0.5rem;
}

@media (min-width: 25rem) {
  .emotion-1 amp-iframe,
  .emotion-1 div>iframe {
    width: calc(100% + 2rem);
    margin: 0 -1rem;
  }
}

.emotion-3 {
  height: 165px;
  position: relative;
  margin-bottom: 1rem;
}

@media (min-width:63rem) {
  .emotion-3 {
    margin-bottom: 2rem;
  }
}

<div>
  <div
    class="emotion-0 emotion-1 emotion-2"
  >
    <div
      class="emotion-3 emotion-4"
    >
      <amp-iframe
        allowfullscreen="allowfullscreen"
        frameborder="0"
        layout="fill"
        sandbox="allow-scripts allow-same-origin"
        scrolling="no"
        src="https://polling.test.bbc.co.uk/ws/av-embeds/media/afaanoromoo/bbc_afaanoromoo_radio/w3ct0l8r/om/amp"
        title="Audio player"
      >
        <amp-img
          alt=""
          attribution=""
          height="16"
          layout="fill"
          placeholder="true"
          src="https://ichef.bbci.co.uk/images/ic/1024x576/p063j1dv.jpg"
          width="9"
        />
        <noscript />
      </amp-iframe>
    </div>
  </div>
</div>
`;

exports[`AVPlayer for On Demand TV should match snapshot for canonical AVPlayer 1`] = `
.emotion-2 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

.emotion-4 {
  border: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

<div>
  <div
    class=" emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <iframe
        allow="autoplay"
        allowfullscreen=""
        class="emotion-4 emotion-5"
        scrolling="no"
        src="https://test.bbc.com/ws/av-embeds/media/pashto/bbc_pashto_tv/w172xcldhhrdqgb/ps?morph_env=live"
        title="ویډیو پلیئر"
      />
      <noscript />
    </div>
  </div>
</div>
`;
